# Sigil

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  sigil-desc.txt  test.sg
ParseTableGen/: CMakeLists.txt  out.h  run_tests.sh
ParseTableGen/parse_table_gen/: consts.py  ebnf_grammer.py  errors.py  ielr_generator.py  lalr1_automata.py  main.py  preprocessing.py
ParseTableGen/tests/: test_1_preprocessing.py  test_2_buildGrammar.py  test_3_FandF.py  test_4_LR1Closure.py  test_5_parseTable.py  utils.py
ParseTableGen/tests/test_descr/: G10.drawio  G10.sebnf  LALR1Test.ebnf  epsilon.drawio  epsilon.sebnf  test.ebnf  test.sebnf
SigilCompiler/: .gitignore  CMakeLists.txt
SigilCompiler/ParseTableGen/parse_table_gen/: consts.py  ebnf_grammer.py  ebnf_parser.py  first_and_follow.py  lalr1_automata.py  main.py
SigilCompiler/ParseTableGen/tests/: test_2_buildGrammar.py  test_3_FandF.py  test_4_LR1Closure.py
SigilCompiler/ParseTableGen/tests/test_descr/: LR1Test.ebnf  test.ebnf
SigilCompiler/inc/: ParseTable.h  parseTable.h  parser.h  scanner.h  syntaxTree.h
SigilCompiler/inc/sigil/: syntaxTree.h
SigilCompiler/include/: ebnf_parser.hpp  sigil_errors.hpp  sigil_log.hpp  syntaxTree.hpp
SigilCompiler/python/: CMakeLists.txt  consts.py  ebnf_parser.py  errors.py  grammer.py  lalrGrammar.py  lalrGrammer.py  lr1Grammar.py  lr1Grammer.py  parse_table.py  rule.py  visualizeLR1.py
SigilCompiler/python/testing/: testConsts.py  test_0_setup.py  test_1_cleanInput.py  test_2_buildGrammar.py  test_2_buildGrammer.py  test_3_FandF.py  test_4_Hashing.py
SigilCompiler/python/testing/test_descr/: FandFtest1.ebnf  FandFtest2.ebnf  test.ebnf
SigilCompiler/python_depr/: annotatedRule.py  ebnf_parser.py  grammar.py  log.py  lr1Grammar.py  requirements.txt
SigilCompiler/python_depr/testing/: testConsts.py
SigilCompiler/src/: CMakeLists.txt  ebnf_parser.cpp  main.cpp  parser.cpp  scanner.cpp  sigil_errors.cpp  sigil_log.cpp  syntaxTree.cpp
docs/: EBNF-Syntax.md
docs/captains_log/: 000-the-begining.md  001-books.md  002-the-forebearers.md  003-spitballs.md  004-whats-in-the-name.md  005-the-code-begins.md  006-return-to-the-sea.md  007-nvm-back-to-py.md  008-whoops.md  009-big-fixes.md  010-buffalo.md  BDD_Lang.capLog  home.md  ideas.canvas
docs/captains_log/OG_logs/: 1_1_WhatsInTheName.txt  1_2_Python.txt  1_5_ProperPlanning.txt  1_OpeningRemarks.txt  usefulLinks.txt
docs/captains_log/OG_logs/devlog/: 4-16-22_TheReturnToCpp.txt  4-5-22_TheREALBeginning.txt  4-7-22_FirstSteps.txt
docs/captains_log/ideas/: alias.md  garbage-collection.md  lists.md  nested-enums.md  numerics.md
docs/captains_log/logs/: 000-the-begining.md  001-books.md  002-the-forebearers.md  003-spitballs.md  004-whats-in-the-name.md  005-the-code-begins.md  006-return-to-the-sea.md  007-nvm-back-to-py.md  008-whoops.md  009-big-fixes.md  010-buffalo.md  011-hermes.md
docs/psuedocode/: FandF.pseudo
lang_descr/: basic.ebnf  sigil.ebnf  sigil.hm  sigil.hr  sigil.sebnf
lang_samples/: class.sg  countPotato.sg  datatypes.sg  enum.sg  funcs.sg  hello.sg  loops.sg
scripts/: generateParseTable.sh
sigil/: CMakeLists.txt
sigil-ebnf-language-support/: CHANGELOG.md  README.md  package.json  sigil-ebnf-language-support-0.0.1.vsix  test.ebnf  vsc-extension-quickstart.md
sigil-ebnf-language-support/syntaxes/: sebnf.tmLanguage.json
sigil-language-support/: CHANGELOG.md  README.md  package.json
sigil-language-support/syntaxes/: sigil.tmLanguage.json
sigil/ast-browser/: CMakeLists.txt
sigil/ast-browser/inc/ast-browser/: ui.h
sigil/ast-browser/src/: ast-browser.cpp  main.cpp  ui.cpp
sigil/sgc/: CMakeLists.txt
sigil/sgc/inc/sgc/: typeChecker.h
sigil/sgc/src/: main.cpp  sgc.cpp  typeChecker.cpp
sigil/sigil-ast/: CMakeLists.txt
sigil/sigil-ast/inc/sigil-ast/: symbolTable.h  syntaxTree.h
sigil/sigil-ast/src/: symbolTable.cpp  syntaxTree.cpp
sigil/slog/: CMakeLists.txt
sigil/slog/inc/slog/: slog.h
sigil/slog/src/: slog.cpp
